another attempt at fixing font on IE

--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,14 @@
 @font-face {
     font-family: "Andes-Regular";
-    src: url("font/Andes-Regular.eot"); /* IE9 Compat Modes */
-    src: url("font/Andes-Regular.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-         url("font/Andes-Regular.otf") format("opentype");
+    src: url('font/andes-regular-webfont.woff2') format('woff2'),
+         url('font/andes-regular-webfont.woff') format('woff');
 }
 
 
 @font-face {
     font-family: "Andes-Bold";
-    src: url("font/Andes-Bold.eot"); /* IE9 Compat Modes */
-    src: url("font/Andes-Bold.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-         url("font/Andes-Bold.otf") format("opentype");
+    src: url('font/andes-bold-webfont.woff2') format('woff2'),
+         url('font/andes-bold-webfont.woff') format('woff');
 }
 
 
